// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Greeter resets salutation and name 1`] = `
<div>
  <span>
    Hello
     
  </span>
  <span>
    Stranger
  </span>
  !
  <form>
    <label
      for="salutation"
    >
      Salutation:
    </label>
     
    <input
      id="salutation"
      onChange={[Function]}
    />
    <label
      for="name"
    >
      Name:
    </label>
     
    <input
      id="name"
      onChange={[Function]}
    />
    <button
      onClick={[Function]}
    >
      Reset
    </button>
  </form>
</div>
`;

exports[`Greeter updates salutation and name 1`] = `
<div>
  <span>
    Howdy
     
  </span>
  <span>
    Pardner
  </span>
  !
  <form>
    <label
      for="salutation"
    >
      Salutation:
    </label>
     
    <input
      id="salutation"
      onChange={[Function]}
    />
    <label
      for="name"
    >
      Name:
    </label>
     
    <input
      id="name"
      onChange={[Function]}
    />
    <button
      onClick={[Function]}
    >
      Reset
    </button>
  </form>
</div>
`;
